# cpp-calculator

./: .gitignore  CMakeLists.txt  README.md  reqs.txt
include/: calc.h  calculator.h  process_input.h
src/: CMakeLists.txt  calc.cpp  calculator.cpp  main.cpp  process_input.cpp
